--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,15 +1,25 @@
 .profile__button {
     cursor: pointer;
-    display: flex;
+    /* display: flex; */
     margin-left: auto;
     width: 150px;
     height: 50px;
     background-color: transparent;
-    border: none;
+    border: 1px solid #FFF;
     background-image: url(../../../images/profile-button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #FFF;
 }
 
 .profile__button:focus {
     outline: none;
 }
 
+
+@media screen and (max-width: 656px) {
+    .profile__button {
+        width: 100%;
+        margin-top: 36px;
+    }
+}
