--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -6,3 +6,16 @@
     font-size: 42px;
     line-height: 48px;
 }
+
+@media screen and (max-width: 656px) {
+    .profile__name {
+        margin-top: 26px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .profile__name {
+        font-size: 27px;
+        line-height: 33px;
+    }
+}
