--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,14 @@
 .profile {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     margin: 40px 0 0;
+
+}
+
+@media screen and (max-width: 656px) {
+    .profile {
+        flex-direction: column;
+        margin: 40px 19px 0;
+    }
 }
