--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,3 +3,11 @@
     font-size: 18px;
     line-height: 22px;
 }
+
+@media screen and (max-width: 500px) {
+    .footer__copyright  {
+        margin-left: 19px;
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
