--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,3 +2,9 @@
     margin: 45px 0 0;
     border-bottom: 1px solid #545454b3;
 }
+
+@media screen and (max-width: 500px) {
+    .header {
+       margin-top: 28px;
+    }
+}
