--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -5,7 +5,7 @@
     width: 150px;
     height: 50px;
     background-color: transparent;
-    border: 1px solid #FFF;
+    border: 2px solid #FFF;
     background-image: url(../../../images/profile-button.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -17,9 +17,10 @@
 }
 
 
-@media screen and (max-width: 656px) {
+@media screen and (max-width: 690px) {
     .profile__button {
         width: 100%;
         margin-top: 36px;
+        background-size: 16px;
     }
 }
