--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -15,3 +15,10 @@
 .profile__edit-button:focus {
     outline: none;
 }
+
+@media screen and (max-width: 500px) {
+    .profile__edit-button {
+        width: 18px;
+        height: 18px;
+    }
+}
