Доработка функционала, исправление ошибок

--- a/blocks/image-popup/image-popup.css
+++ b/blocks/image-popup/image-popup.css
@@ -1,11 +1,13 @@
-.edit-form {
+.image-popup {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.9);
     z-index: 4;
+
+    display: flex;
 
     opacity: 1;
     visibility: visible;
