--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,6 +10,7 @@
     background-position: center;
     background-size: cover;
     border: none;
+    vertical-align: super;
 }
 
 .profile__edit-button:focus {
