--- a/blocks/edit-form/__field/edit-form__field.css
+++ b/blocks/edit-form/__field/edit-form__field.css
@@ -1,6 +1,5 @@
-.edit-form__field-subline {
+.edit-form__field {
     margin: 0;
-    margin-top: 30px;
     padding-bottom: 13px;
 
     border: none;
@@ -9,4 +8,8 @@
     font-size: 14px;
     line-height: 17px;
     outline: none;
+}
+
+.edit-form__field:last-of-type {
+    margin-top: 30px;
 }
