--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,11 +1,12 @@
 .elements {
     margin-top: 51px;
-    width: 100%;
+    /* width: 100%; */
+    min-width: 282px;
     display: grid;
-    grid-template-rows: repeat(2, auto);
-    grid-template-columns: repeat(3, auto);
-    grid-column-gap: 17px;
-    grid-row-gap: 20px;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 17px;
+    row-gap: 20px;
 }
 
 @media screen and (max-width: 915px) {
@@ -20,7 +21,6 @@
 @media screen and (max-width: 600px) {
     .elements {
         grid-template-rows: repeat(6, 1fr);
-        grid-template-columns: repeat(1, 282px);
-          
+        grid-template-columns: repeat(1, 282px);  
     }
 }
