--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,4 +1,4 @@
-.edit-form__field-name {
+.popup__field {
     margin: 0;
     padding-bottom: 13px;
 
@@ -7,8 +7,9 @@
 
     font-size: 14px;
     line-height: 17px;
+    outline: none;
 }
 
-.edit-form__field-name:focus {
-    outline: none;
+.popup__field:last-of-type {
+    margin-top: 30px;
 }
