--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,4 @@
-.edit-form {
+.popup {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -7,7 +7,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 4;
 
-    opacity: 1;
-    visibility: visible;
+    opacity: 0;
+    visibility: hidden;
     transition: .5s opacity, .5s visibility;
 }
