--- a/blocks/profile/__name-subline/profile__name-subline.css
+++ b/blocks/profile/__name-subline/profile__name-subline.css
@@ -4,6 +4,11 @@
     color: #FFF;
     font-size: 18px;
     line-height: 22px;
+
+    max-width: 340px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 656px) {
@@ -14,6 +19,7 @@
 
 @media screen and (max-width: 500px) {
     .profile__name-subline {
+        max-width: 282px;
         font-size: 14px;
         line-height: 17px;
     }
