--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -6,9 +6,15 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
+
+    max-width: 340px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
 }
 
-@media screen and (max-width: 656px) {
+@media screen and (max-width: 690px) {
     .profile__name {
         margin-top: 26px;
     }
@@ -16,6 +22,7 @@
 
 @media screen and (max-width: 500px) {
     .profile__name {
+        max-width: 282px;
         font-size: 27px;
         line-height: 33px;
     }
