--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 
 @import url(../vendor/normalize.css);
-@import url(../vendor/fonts/fonts.css);
+@import url(../vendor/fonts/inter/inter.css);
 
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
@@ -10,13 +10,43 @@
 
 
 @import url(../blocks/edit-form/edit-form.css);
+@import url(../blocks/edit-form/_closed/edit-form_closed.css);
 @import url(../blocks/edit-form/__close-button/edit-form__close-button.css);
 @import url(../blocks/edit-form/__window/edit-form__window.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
-@import url(../blocks/edit-form/__field-name/edit-form__field-name.css);
-@import url(../blocks/edit-form/__field-subline/edit-form__field-subline.css);
-
+@import url(../blocks/edit-form/__field/edit-form__field.css);
 @import url(../blocks/edit-form/__button/edit-form__button.css);
+
+@import url(../blocks/item-form/item-form.css);
+@import url(../blocks/item-form/_closed/item-form_closed.css);
+@import url(../blocks/item-form/__close-button/item-form__close-button.css);
+@import url(../blocks/item-form/__field/item-form__field.css);
+@import url(../blocks/item-form/__button/item-form__button.css);
+@import url(../blocks/item-form/__title/item-form__title.css);
+@import url(../blocks/item-form/__window/item-form__window.css);
+
+@import url(../blocks/image-popup/image-popup.css);
+@import url(../blocks/image-popup/_closed/image-popup_closed.css);
+@import url(../blocks/image-popup/__window/image-popup__window.css);
+@import url(../blocks/image-popup/__image/image-popup__image.css);
+@import url(../blocks/image-popup/__caption/image-popup__caption.css);
+@import url(../blocks/image-popup/__close-button/image-popup__close-button.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_image-popup/popup_image-popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__close-button/_image-popup/popup__close-button_image-popup.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__window/popup__window.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
+
+
+
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -34,7 +64,11 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__caption/element__caption.css);
 @import url(../blocks/element/__title/element__title.css);
-@import url(../blocks/element/__like/element__like-button.css);
+@import url(../blocks/element/__like-button/element__like-button.css);
+@import url(../blocks/element/__like-button/_active/element__like-button_active.css);
+@import url(../blocks/element/__trash-button/element__trash-button.css);
+
+
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
